Fix miss align header and not scrolling header row (#827)
* Fix last column align

* Fix tooltip position

* Fix header row not scrolling when filterrow appears

--- a/themes/react-data-grid-cell.css
+++ b/themes/react-data-grid-cell.css
@@ -247,3 +247,8 @@
 .rdg-child-row-btn .glyphicon-remove-sign:hover {
   color: red;
 }
+
+.last-column .cell-tooltip-text{
+  right: 100%;
+  left: 0% !important;
+}
